--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 <project name="Kripki" default="build" basedir="." xmlns:doxygen="antlib:org.doxygen.tools" xmlns:ivy="antlib:org.apache.ivy.ant">
 	<property name="src.dir" location="src" />
 	<property name="bin.dir" location="bin" />
+	<property name="db.dir" location="db" />
 
 	<path id='build.path'>
 	</path>
@@ -20,6 +21,7 @@
 	</target>
 
 	<target name='runserver' depends='build, cl-args' description="Run the server">
+		<mkdir dir="${db.dir}" />
 		<java classpathref="run.path" classname='hu.ppke.itk.sciar.kripki.server.Server' fork='true'>
 			<assertions enableSystemAssertions="true" >
 				<enable package="hu.ppke.itk.sciar.kripki.server" />
