Add Ivy & Commons lang as dependency

--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,32 @@
 <project name="Kripki" default="build" basedir="." xmlns:doxygen="antlib:org.doxygen.tools" xmlns:ivy="antlib:org.apache.ivy.ant">
 	<property name="src.dir" location="src" />
 	<property name="bin.dir" location="bin" />
+	<property name="lib.dir" location="lib" />
 	<property name="db.dir" location="db" />
 
 	<path id='build.path'>
+		<fileset dir='${lib.dir}'>
+			<include name='**/*.jar' />
+		</fileset>
 	</path>
 	<path id='run.path'>
+		<fileset dir='${lib.dir}'>
+			<include name='**/*.jar' />
+		</fileset>
     	<path location="${bin.dir}"/>
     	<path location="."/>
 	</path>
+
+    <target name="bootstrap" description="Install Apache Ivy">
+        <mkdir dir="${user.home}/.ant/lib"/>
+        <get dest="${user.home}/.ant/lib/ivy.jar" src="http://search.maven.org/remotecontent?filepath=org/apache/ivy/ivy/2.3.0/ivy-2.3.0.jar"/>
+    </target>
+
+	<target name="resolve" description="Resolve dependencies with Ivy">
+		<mkdir dir="${lib.dir}" />
+		<ivy:resolve />
+		<ivy:retrieve sync="true" type="jar" pattern="${lib.dir}/[artifact].[ext]"/>
+	</target>
 
 	<target name='clean' description="Delete compiled binaries">
 		<delete dir="${bin.dir}" />
