--- a/simplelogger.properties
+++ b/simplelogger.properties
@@ -1,3 +1,3 @@
 # SLF4J SimpleLogger configuration file
-org.slf4j.simpleLogger.defaultLogLevel=debug
+org.slf4j.simpleLogger.defaultLogLevel=trace
 org.slf4j.simpleLogger.showShortLogName=true
